# gliderpy

./: .buildinfo  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  00-quick_intro-output.html  00-quick_intro-output.ipynb  01-plotting_intro-output.html  01-plotting_intro-output.ipynb  LICENSE.txt  MANIFEST.in  README.md  environment.yml  genindex.html  github_deploy_key_ioos_gliderpy.enc  gliderpy.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy-docs.yml  publish.yml  pypi.yml  test_code.yml  tests.yml
_modules/: index.html
_modules/gliderpy/: fetchers.html
_sources/: 00-quick_intro-output.ipynb.txt  01-plotting_intro-output.ipynb.txt  index.rst.txt
dev/: .doctr-files  genindex.html  gliderpy.html  index.html  objects.inv  plotting.ipynb-output.html  plotting.ipynb-output.ipynb  py-modindex.html  quick_intro-output.html  quick_intro-output.ipynb  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/gliderpy/: fetchers.html
dev/_sources/: index.rst.txt  plotting.ipynb-output.ipynb.txt  quick_intro-output.ipynb.txt
dev/_static/: documentation_options.js
docs/: Makefile
docs/source/: conf.py  gliderpy.rst  index.rst
gliderpy/: __init__.py  fetchers.py  plotters.py  plotting.py  servers.py
notebooks/: 00-quick_intro.ipynb  01-plotting_intro.ipynb  data_var_attr.ipynb  demo.ipynb  non_ioos_sources.ipynb  plotting.ipynb  quick_intro.ipynb  uncabled-demo.ipynb
tests/: test_fetchers.py  test_plotting.py
tests/cassettes/: test_standardise_variables.yaml  test_variables.yaml
tests/cassettes/test_fetchers/: test_standardise_variables.yaml
