[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "gliderpy"
description = "Glider Data Fetcher"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Callum Rollo", email = "c.rollo@outlook.com" },
  { name = "Filipe Fernandes" },
  { name = "Lindsay Abrams" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [ "erddapy>=3.2", "pandas", "pandas-flavor", "requests", "stamina", "xarray" ]
optional-dependencies.docs = [ "jupyter", "nbconvert", "nbsphinx", "palettable", "sphinx" ]
optional-dependencies.plotting = [ "cartopy", "gsw", "matplotlib" ]
optional-dependencies.test = [
  "check-manifest",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mpl",
  "pytest-recording",
  "pytest-sugar",
  "pytest-xdist",
]
urls.documentation = "https://ioos.github.io/gliderpy"
urls.homepage = "https://github.com/ioos/gliderpy"
urls.repository = "https://github.com/ioos/gliderpy"

[tool.setuptools]
packages = [
  "gliderpy",
]
include-package-data = true
dynamic.readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
write_to = "gliderpy/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
exclude = [
  "docs",
  "setup.py",
  "tests",
]
color = true
verbose = 1
quiet = false

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  ".coveragerc",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest]
ini_options.filterwarnings = [
  "error:::gliderpy.*",
  "ignore::RuntimeWarning",
  "ignore::UserWarning",
]
